--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
                     ".jsx"
                 ]
             }
+        ],
+        "react/forbid-prop-types": [
+            0
         ]
     }
 }
