--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://grubersjoe.de/playground/audi-react",
   "dependencies": {
     "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-numeric-input": "^2.2.3",
     "react-scripts": "1.1.0",
     "typeface-roboto": "^0.0.54"
   },
