--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.7",
     "react-scripts": "1.1.0",
     "typeface-roboto": "^0.0.54"
   },
