--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://grubersjoe.de/playground/audi-react",
   "dependencies": {
     "glamor": "^2.20.40",
+    "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
