--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettify-xml": "^1.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.0",
     "react-dropzone": "^4.2.7",
     "react-scripts": "1.1.2",
